--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Install and build
-        uses: npm install && npm run build
+        run: npm install && npm run build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.3.3
